# pyquantsim

.github/workflows/: cxfreeze.yml  pyinstaller.yml  python-publish.yml
gui/: .gitignore  pyproject.toml
gui/assets/: assets.qrc
gui/qml/: bloch.qml
gui/scripts/: build.py
gui/windows/: main.py
gui/windows/widgets/: blochsphere.py
gui/windows/widgets/editor/: caditem.py  editor.py  hadamarad.py  inverses.py  observer.py  paulix.py  pauliy.py  pauliz.py  qubit.py  s.py
lib/: README.md  pyproject.toml
lib/docs/source/: conf.py  index.rst  modules.rst  pyquantsim.circuit.rst  pyquantsim.core.rst  pyquantsim.gates.rst  pyquantsim.rst
lib/docs/source/usage/: installation.rst
lib/examples/: all.ipynb
lib/pyquantsim/circuit/: component.py  gate.py  observer.py  qubit.py
lib/pyquantsim/core/: __init__.py  qubit.py  register.py
lib/pyquantsim/gates/: __init__.py  gate.py  inverses.py  pauliz.py  sgate.py
quantsim/pyquantsim/: __init__.py
quantsim/pyquantsim/circuit/: observer.py  qubit.py
quantsim/pyquantsim/gates/: hadamarad.py  identity.py  paulix.py  pauliy.py
quantsim/quantsim/circuit/: __init__.py  circuit.py  component.py  gate.py  observer.py  wire.py
quantsim/quantsim/core/: qubit.py
