[project]
name = "pyquantsim-gui"
version = "0.1.0"
description = "A Graphical User Interface for pyquantsim"
authors = [
    {name = "Joyal V Poulose"},
    {name = "Karn Yogish"},
    {name = "Kevin K Tom"},
    {name = "Leana Shaji"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pyside6 (>=6.10.1,<7.0.0)",
    "pyquantsim",
    "typing-extensions (>=4.15.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.pyside6-project]
files = ["app.py", "windows/*.py", "windows/widgets/*.py"]
[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pyinstaller (>=6.19.0,<7.0.0)",
    "pyinstaller-hooks-contrib (>=2026.2,<2027.0)"
]
