[project]
name = "pyquantsim-gui"
version = "0.1.0"
description = "A Graphical User Interface for pyquantsim"
authors = [
    {name = "Joyal V Poulose"},
    {name = "Karn Yogish"},
    {name = "Kevin K Tom"},
    {name = "Leana Shaji"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pyside6 (>=6.10.1,<7.0.0)",
    "pyquantsim",
    "typing-extensions (>=4.15.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.pyside6-project]
files = ["app.py", "windows/*.py", "windows/widgets/*.py"]
[tool.poetry]
package-mode = false

[tool.cxfreeze]
executables = [
    {script = "app.py", base = "gui"}
]
[tool.cxfreeze.build_exe]
build_exe= "dist"
zip_include_packages = ["encodings", "PySide6", "pyquantsim", "typing-extensions"]
excludes = ["tkinter", "http", "xml", "pydoc", "email"]

[dependency-groups]
dev = [
    "cx-freeze (>=8.6.3,<9.0.0)"
]
