[project]
name = "pyquantsim"
version = "0.1.0"
description = "A simple Qubit and quantum circuit simulator"
authors = [
    {name = "Joyal V Poulose", email="joyalvpoulose2007@gmail.com"},
    {name = "Karan Yogish", email="yogishkaran@gmail.com"}, 
    {name = "Kevin K Tom", email="kevinktom666@gmail.com"},
    {name = "Leana Shaji", email="leanashaji0@gmail.com"}
   
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]